fix/HWPD-3518/address-field-overlap (#786)
- Replace grid with flex, to try and support safari mobile devices

--- a/src/component-library/core-components/AddressFinder/AddressFinder.module.scss
+++ b/src/component-library/core-components/AddressFinder/AddressFinder.module.scss
@@ -120,7 +120,8 @@
 }
 
 .manual-fields {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   gap: $spacing-5 0;
   color: var(--text);
 }
